tambah activity daftar

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,6 @@ dependencies {
     implementation 'androidx.fragment:fragment:1.2.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 }
