--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ allprojects {
         jcenter()
         maven { url "http://dl.bintray.com/pt-midtrans/maven" }
         maven { url "https://jitpack.io" }
+//        mavenCentral()
         
     }
 }
