--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,15 @@
 
     <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="true"
-        android:icon="@drawable/ic_pus_app"
+        android:icon="@mipmap/ic_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_pus_app"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".DaftarActivity"></activity>
+        <activity android:name=".Login"></activity>
+        <activity android:name=".DaftarActivity" />
         <activity android:name=".TutorialActivity" />
         <activity android:name=".ChatActivity" />
         <activity android:name=".NotificationActivity" />
@@ -24,7 +25,7 @@
         <activity android:name=".Transaction.ProductDetailActivity" />
         <activity android:name=".Transaction.ProductOrderActivity" />
         <activity android:name=".Transaction.ProductListActivity" />
-        <activity android:name=".Login">
+        <activity android:name=".SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
