--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.spusapp">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <application xmlns:tools="http://schemas.android.com/tools"
         android:allowBackup="true"
         android:icon="@mipmap/ic_logo"
@@ -14,7 +12,8 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
-        <activity android:name=".Login"></activity>
+        <activity android:name=".RutinListActivity"></activity>
+        <activity android:name=".Login" />
         <activity android:name=".DaftarActivity" />
         <activity android:name=".TutorialActivity" />
         <activity android:name=".ChatActivity" />
@@ -33,5 +32,7 @@
             </intent-filter>
         </activity>
     </application>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
